# elearningplatform

./: .replit  db.sqlite3  pyproject.toml  readme.md  requirements.txt  tasks.txt
backend/: settings.py  urls.py
core/: forms.py  urls.py  views.py
core/static/: style.css
core/templates/: admin-dashboard.html  base.html  login.html  main.html  profile.html  signup.html
courses/: admin.py  models.py  urls.py  views.py
courses/migrations/: 0001_initial.py  0002_course_thumb_alter_video_video_file.py  0003_course_slug.py  0004_orders.py  0005_comment.py  0006_alter_comment_message.py
courses/templates/: course.html  courses.html  view_course.html
static/: staticfiles.json
