[tool.poetry]
name = "elearningplatform"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "4.2.1"
django-cors-headers = "4.0.0"
Pillow = "9.5.0"
cloudinary = "1.32.0"
whitenoise = "6.4.0"
six = "1.16.0"
sqlparse = "0.4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
